Fix select options are not visible on Windows

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -259,6 +259,9 @@
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
+    option {
+      background: $dark;
+    }
   }
   .checkbox {
     @extend .text;
